--- a/timer.html
+++ b/timer.html
@@ -20,17 +20,17 @@
 </div>
 
 <script>
-  // --- lecture des paramètres envoyés par Glide ---
+  // --- Params envoyés par Glide ---
   const q = new URLSearchParams(location.search);
-  const prep = Math.max(0, +q.get('prep')||0);     // Décompte (US)
-  const dur  = Math.max(0, +q.get('dur')||0);      // Total Sec (US)
+  const prep = Math.max(0, +q.get('prep')||0);   // secondes de préparation
+  const dur  = Math.max(0, +q.get('dur')||0);    // secondes de travail
   const startStr = q.get('start');
   const start = startStr ? new Date(startStr).getTime() : Date.now();
 
   const phaseEl = document.getElementById('phase');
   const timeEl  = document.getElementById('time');
 
-  // --- utilitaires ---
+  // --- Utils ---
   const fmt = (s)=>{
     s = Math.max(0, Math.floor(s));
     const m = Math.floor(s/60).toString().padStart(2,'0');
@@ -38,11 +38,20 @@
     return `${m}:${sec}`;
   };
 
-  // petit beep court
-  const beep = (freq=880, dur=180, vol=0.12)=>{
+  const shortBeep = (freq=1000, dur=120, vol=0.12)=>{
     try{
-      const Ctx = window.AudioContext||window.webkitAudioContext;
-      const ctx = new Ctx();
+      const C = window.AudioContext||window.webkitAudioContext;
+      const ctx = new C();
+      const o = ctx.createOscillator(), g = ctx.createGain();
+      o.connect(g); g.connect(ctx.destination);
+      o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
+      o.start(); setTimeout(()=>{o.stop(); ctx.close();}, dur);
+    }catch(e){}
+  };
+  const longBeep = (freq=880, dur=320, vol=0.16)=>{
+    try{
+      const C = window.AudioContext||window.webkitAudioContext;
+      const ctx = new C();
       const o = ctx.createOscillator(), g = ctx.createGain();
       o.connect(g); g.connect(ctx.destination);
       o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
@@ -50,10 +59,10 @@
     }catch(e){}
   };
 
-  // pour ne biper qu'une fois par seconde restante
-  let lastPrepSec = null;
-  let lastRunSec  = null;
-  let doneBeeped  = false;
+  // états pour biper une seule fois par seconde affichée
+  let lastPrepDisplay = null;
+  let lastRunDisplay  = null;
+  let endLongBeepDone = false;
 
   const tick = ()=>{
     const now = Date.now();
@@ -62,51 +71,58 @@
     const prepRemain = Math.max(0, prep - elapsed);
     const runRemain  = Math.max(0, prep + dur - elapsed);
 
-    // PHASE PRÉPA
+    // --- Phase Préparation ---
     if (prep > 0 && prepRemain > 0) {
       phaseEl.textContent = "Prépare toi pour l'exercice";
-      timeEl.textContent  = fmt(prepRemain);
+      const disp = Math.floor(prepRemain);      // ce qui s’affiche (00:03, 00:02, 00:01, 00:00)
+      timeEl.textContent = fmt(prepRemain);
 
-      // bips à 3, 2, 1 secondes
-      const s = Math.ceil(prepRemain); // 3.2s -> 4 ; 2.0 -> 2
-      if (s !== lastPrepSec && (s===3 || s===2 || s===1)) {
-        beep(1000);                      // tonalité prépa
-        if (navigator.vibrate) navigator.vibrate(60);
+      if (disp !== lastPrepDisplay) {
+        if (disp === 3 || disp === 2 || disp === 1) {
+          shortBeep(1000); if (navigator.vibrate) navigator.vibrate(50);
+        }
+        if (disp === 0) {                        // bip long sur 0
+          longBeep(900, 360, 0.18);
+          if (navigator.vibrate) navigator.vibrate([80,40,80]);
+        }
+        lastPrepDisplay = disp;
       }
-      lastPrepSec = s;
       return;
     }
 
-    // PHASE RUN (travail)
+    // --- Phase Travail ---
     if (runRemain > 0) {
       phaseEl.textContent = "C'est parti !";
-      timeEl.textContent  = fmt(runRemain);
+      const disp = Math.floor(runRemain);
+      timeEl.textContent = fmt(runRemain);
 
-      // bips à 3, 2, 1 secondes avant la fin du run
-      const s = Math.ceil(runRemain);
-      if (s !== lastRunSec && (s===3 || s===2 || s===1)) {
-        beep(1200);                      // tonalité un peu plus haute
-        if (navigator.vibrate) navigator.vibrate(60);
+      if (disp !== lastRunDisplay) {
+        if (disp === 3 || disp === 2 || disp === 1) {
+          shortBeep(1200); if (navigator.vibrate) navigator.vibrate(50);
+        }
+        if (disp === 0) {                        // bip long sur 0 (fin de travail)
+          longBeep(880, 420, 0.2);
+          if (navigator.vibrate) navigator.vibrate([100,60,120]);
+          endLongBeepDone = true;
+        }
+        lastRunDisplay = disp;
       }
-      lastRunSec = s;
       return;
     }
 
-    // FIN
+    // --- Terminé ---
     phaseEl.textContent = "Terminé";
     timeEl.textContent  = "00:00";
-    if (!doneBeeped) {
-      doneBeeped = true;
-      // bip final + petite vibration
-      beep(880, 250, 0.15);
-      if (navigator.vibrate) navigator.vibrate([80,60,120]);
+    // sécurité si jamais on a raté le bip long final (rare)
+    if (!endLongBeepDone) {
+      longBeep(880, 420, 0.2);
+      if (navigator.vibrate) navigator.vibrate([100,60,120]);
+      endLongBeepDone = true;
     }
   };
 
-  // premier rendu + tick régulier
   tick();
-  // on tick toutes les 200 ms pour être bien synchro sur les transitions
+  // tick rapide pour caler pile sur les changements de seconde affichée
   const iv = setInterval(tick, 200);
-  // par sécurité, arrête l'interval après 2h
-  setTimeout(()=>clearInterval(iv), 2*60*60*1000);
+  setTimeout(()=>clearInterval(iv), 2*60*60*1000); // safety 2h
 </script>
