--- a/timer.html
+++ b/timer.html
@@ -1,116 +1,139 @@
-<script>
-  // --- Params envoyés par Glide ---
-  const q = new URLSearchParams(location.search);
-  const prep = Math.max(0, +q.get('prep')||0);   // secondes de préparation
-  const dur  = Math.max(0, +q.get('dur')||0);    // secondes de travail
-  const startStr = q.get('start');
-  const start = startStr ? new Date(startStr).getTime() : Date.now();
+<!doctype html>
+<html lang="fr">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Timer</title>
+<style>
+  :root{ --bg:#0684CF; --fg:#ffffff; }
+  html,body{height:100%}
+  body{
+    margin:0; background:var(--bg); color:var(--fg);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial;
+    display:flex; align-items:center; justify-content:center;
+  }
+  .wrap{ text-align:center; padding:24px }
+  .phase{ font-size:18px; opacity:.95; margin-bottom:8px; font-weight:600 }
+  .time{ font-size:88px; letter-spacing:1px; line-height:1; font-weight:800 }
+</style>
 
-  const phaseEl = document.getElementById('phase');
-  const timeEl  = document.getElementById('time');
+<body>
+  <div class="wrap">
+    <div class="phase" id="phase">Prépare toi pour l'exercice</div>
+    <div class="time" id="time">00:00</div>
+  </div>
 
-  // --- Utils ---
-  const fmt = (s)=>{
-    s = Math.max(0, Math.floor(s));
-    const m = Math.floor(s/60).toString().padStart(2,'0');
-    const sec = (s%60).toString().padStart(2,'0');
-    return `${m}:${sec}`;
-  };
+  <script>
+    // --- Params envoyés par Glide ---
+    const q = new URLSearchParams(location.search);
+    const prep = Math.max(0, +q.get('prep')||0);   // secondes de préparation
+    const dur  = Math.max(0, +q.get('dur')||0);    // secondes de travail
+    const startStr = q.get('start');
+    const start = startStr ? new Date(startStr).getTime() : Date.now();
 
-  // Audio utils
-  const shortBeep = (freq=1000, dur=120, vol=0.12)=>{
-    try{
-      const C = window.AudioContext||window.webkitAudioContext;
-      const ctx = new C();
-      const o = ctx.createOscillator(), g = ctx.createGain();
-      o.connect(g); g.connect(ctx.destination);
-      o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
-      o.start(); setTimeout(()=>{o.stop(); ctx.close();}, dur);
-    }catch(e){}
-  };
-  const longBeep = (freq=880, dur=360, vol=0.18)=>{
-    try{
-      const C = window.AudioContext||window.webkitAudioContext;
-      const ctx = new C();
-      const o = ctx.createOscillator(), g = ctx.createGain();
-      o.connect(g); g.connect(ctx.destination);
-      o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
-      o.start(); setTimeout(()=>{o.stop(); ctx.close();}, dur);
-    }catch(e){}
-  };
+    const phaseEl = document.getElementById('phase');
+    const timeEl  = document.getElementById('time');
 
-  // états pour ne biper qu'une fois par seconde affichée
-  let lastPrepDisplay = null;
-  let lastRunDisplay  = null;
-  let endLongBeepDone = false;
+    // --- Utils ---
+    const fmt = (s)=>{
+      s = Math.max(0, Math.floor(s));
+      const m = Math.floor(s/60).toString().padStart(2,'0');
+      const sec = (s%60).toString().padStart(2,'0');
+      return `${m}:${sec}`;
+    };
 
-  const renderAndMaybeBeep = ()=>{
-    const now = Date.now();
-    const elapsed = (now - start)/1000;
+    // Audio utils
+    const shortBeep = (freq=1000, dur=120, vol=0.12)=>{
+      try{
+        const C = window.AudioContext||window.webkitAudioContext;
+        const ctx = new C();
+        const o = ctx.createOscillator(), g = ctx.createGain();
+        o.connect(g); g.connect(ctx.destination);
+        o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
+        o.start(); setTimeout(()=>{o.stop(); ctx.close();}, dur);
+      }catch(e){}
+    };
+    const longBeep = (freq=880, dur=360, vol=0.18)=>{
+      try{
+        const C = window.AudioContext||window.webkitAudioContext;
+        const ctx = new C();
+        const o = ctx.createOscillator(), g = ctx.createGain();
+        o.connect(g); g.connect(ctx.destination);
+        o.type='sine'; o.frequency.value=freq; g.gain.value=vol;
+        o.start(); setTimeout(()=>{o.stop(); ctx.close();}, dur);
+      }catch(e){}
+    };
 
-    const prepRemain = Math.max(0, prep - elapsed);
-    const runRemain  = Math.max(0, prep + dur - elapsed);
+    // états pour ne biper qu'une fois par seconde affichée
+    let lastPrepDisplay = null;
+    let lastRunDisplay  = null;
+    let endLongBeepDone = false;
 
-    // Phase Prépa
-    if (prep > 0 && prepRemain > 0) {
-      phaseEl.textContent = "Prépare toi pour l'exercice";
-      const disp = Math.floor(prepRemain);     // exactement ce qui est affiché
-      timeEl.textContent = fmt(prepRemain);
+    const renderAndMaybeBeep = ()=>{
+      const now = Date.now();
+      const elapsed = (now - start)/1000;
 
-      if (disp !== lastPrepDisplay) {
-        if (disp === 3 || disp === 2 || disp === 1) {
-          shortBeep(1000); if (navigator.vibrate) navigator.vibrate(50);
+      const prepRemain = Math.max(0, prep - elapsed);
+      const runRemain  = Math.max(0, prep + dur - elapsed);
+
+      // Phase Prépa
+      if (prep > 0 && prepRemain > 0) {
+        phaseEl.textContent = "Prépare toi pour l'exercice";
+        const disp = Math.floor(prepRemain);     // ce qui s’affiche: 3,2,1,0
+        timeEl.textContent = fmt(prepRemain);
+
+        if (disp !== lastPrepDisplay) {
+          if (disp === 3 || disp === 2 || disp === 1) {
+            shortBeep(1000); if (navigator.vibrate) navigator.vibrate(50);
+          }
+          if (disp === 0) { // bip long sur 0
+            longBeep(900, 420, 0.2);
+            if (navigator.vibrate) navigator.vibrate([80,40,80]);
+          }
+          lastPrepDisplay = disp;
         }
-        if (disp === 0) { // bip long sur 0
-          longBeep(900, 420, 0.2);
-          if (navigator.vibrate) navigator.vibrate([80,40,80]);
-        }
-        lastPrepDisplay = disp;
+        return;
       }
-      return;
-    }
 
-    // Phase Travail
-    if (runRemain > 0) {
-      phaseEl.textContent = "C'est parti !";
-      const disp = Math.floor(runRemain);
-      timeEl.textContent = fmt(runRemain);
+      // Phase Travail
+      if (runRemain > 0) {
+        phaseEl.textContent = "C'est parti !";
+        const disp = Math.floor(runRemain);
+        timeEl.textContent = fmt(runRemain);
 
-      if (disp !== lastRunDisplay) {
-        if (disp === 3 || disp === 2 || disp === 1) {
-          shortBeep(1200); if (navigator.vibrate) navigator.vibrate(50);
+        if (disp !== lastRunDisplay) {
+          if (disp === 3 || disp === 2 || disp === 1) {
+            shortBeep(1200); if (navigator.vibrate) navigator.vibrate(50);
+          }
+          if (disp === 0) { // bip long sur 0
+            longBeep(880, 420, 0.2);
+            if (navigator.vibrate) navigator.vibrate([100,60,120]);
+            endLongBeepDone = true;
+          }
+          lastRunDisplay = disp;
         }
-        if (disp === 0) { // bip long sur 0
-          longBeep(880, 420, 0.2);
-          if (navigator.vibrate) navigator.vibrate([100,60,120]);
-          endLongBeepDone = true;
-        }
-        lastRunDisplay = disp;
+        return;
       }
-      return;
-    }
 
-    // Terminé
-    phaseEl.textContent = "Terminé";
-    timeEl.textContent  = "00:00";
-    if (!endLongBeepDone) {
-      longBeep(880, 420, 0.2);
-      if (navigator.vibrate) navigator.vibrate([100,60,120]);
-      endLongBeepDone = true;
-    }
-  };
+      // Terminé
+      phaseEl.textContent = "Terminé";
+      timeEl.textContent  = "00:00";
+      if (!endLongBeepDone) {
+        longBeep(880, 420, 0.2);
+        if (navigator.vibrate) navigator.vibrate([100,60,120]);
+        endLongBeepDone = true;
+      }
+    };
 
-  // --- métronome calé sur la seconde système ---
-  const tickAligned = ()=>{
-    renderAndMaybeBeep();
-    const now = Date.now();
-    // calcule le délai restant jusqu'à la prochaine seconde pleine
-    const msToNextSecond = 1000 - ((now - start) % 1000);
-    setTimeout(tickAligned, Math.max(80, msToNextSecond)); // jamais < 80ms
-  };
+    // --- métronome calé sur la seconde système ---
+    const tickAligned = ()=>{
+      renderAndMaybeBeep();
+      const now = Date.now();
+      const msToNextSecond = 1000 - ((now - start) % 1000);
+      setTimeout(tickAligned, Math.max(80, msToNextSecond)); // jamais < 80ms
+    };
 
-  // premier rendu immédiat puis calage exact sur les secondes
-  tickAligned();
-  // sécurité : au bout de 2h, on stoppe les callbacks
-  setTimeout(()=>{ /* noop: navigateur détruira la page bien avant */ }, 2*60*60*1000);
-</script>
+    // premier rendu immédiat puis calage exact sur les secondes
+    tickAligned();
+  </script>
+</body>
+</html>
