--- a/timer.html
+++ b/timer.html
@@ -10,8 +10,8 @@
     display:flex; align-items:center; justify-content:center;
   }
   .wrap{ text-align:center; padding:24px }
-  .phase{ font-size:clamp(45px,6vw,36px); opacity:.95; margin-bottom:24px; font-weight:600 }
-  .phase.work{ font-size:clamp(45px,6vw,36px); }
+  .phase{ font-size:clamp(35px,6vw,36px); opacity:.95; margin-bottom:24px; font-weight:600 }
+  .phase.work{ font-size:clamp(45px,6vw,36px); opacity:.95; margin-bottom:24px; font-weight:600 }
   .time{ font-size:60px; letter-spacing:1px; line-height:1; font-weight:800 }
 </style>
 
